syntax ="proto3";

package go.micro.svr.consignment;

service ShippingService {
    rpc CreateConsignment(Consignment) returns(Response) {
    }
    rpc GetAll(GetRequest)returns(Response) {
    }
}

message Consignment {
    string id=1;
    string description=2;
    string weight=3;
    repeated Container containers;
    string vessel_id=5;
}

message Container {
    string id=1;
    string user_id=2;
    string coumenter_id=3;
    string origin=4;
}

message  Response{

}

message GetRequest{

}